# AntTP-tutorial

./: .env  .env.example  .gitignore  ADDING_FEATURES.md  API.md  API_TEST_GUIDE.md  CHANGELOG.md  COMMANDS.md  COMPILE_FIX.md  COMPLETE_TEST_GUIDE.md  CONTRIBUTING.md  Cargo.lock.placeholder  Cargo.toml  DEPENDENCY_FIX.md  DEPLOYMENT.md  DeepSeek-Refactor AntTP Tutorial Code for Better Structure.md  Dockerfile  Dockerfile.local  Dockerfile.simple  FEATURES.md  FILE_INDEX.md  FRONTEND_GUIDE.md  GITHUB-PR-INSTRUCTIONS.md  GITHUB_PUSH_GUIDE.md  GIT_INIT_GUIDE.md  IMPLEMENTATION_GUIDE.md  LICENSE  LIFETIME_FIX.md  PR-COMMIT-MESSAGE.md  PROJECT_SUMMARY.md  PYTHON_BRIDGE.md  PYTHON_TO_RUST.md  QUICKSTART.md  README-FULLSTACK.md  README-old-backup.md  README-old.md  README.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  RUNTIME_FIX.md  (+28 more)
anttp-health/: health.json
anttp-health/api/v1/: chunks.json
autonomi-anttp-complete-final/autonomi-anttp-final/autonomi-anttp-fixed/: DEVELOPMENT.md  QUICKSTART.md  README.md  debug.sh  start.sh
backend/: .coverage  Cargo.toml  Dockerfile  coverage.xml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py
backend/src/: main.rs
backend/tests/integration/: test_chunks_api.py
backend/tests/unit/: test_chunks.py  test_scratchpads.py
frontend/: .env.example  Dockerfile  README.md  package.json  tailwind.config.js
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/: app.css
mock-anttp/: Dockerfile  app.py
src/: config.rs  main.rs  models.rs
src/handlers/: archives.rs  chunk_handler.rs  chunks.rs  commands.rs  graph.rs  keyvalue.rs  mod.rs  pnr.rs  pointers.rs  publicdata.rs  registers.rs  scratchpads.rs  tarchive.rs
src/models/: mod.rs
src/services/: chunk_service.rs  chunk_service_tests.rs  mod.rs  network.rs
(+39 files in other folders)
