[package]
name = "autonomi-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for AntTP
reqwest = { version = "0.11", features = ["json"] }

# Base64 encoding/decoding
base64 = "0.21"

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.2"
actix-rt = "2.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
