[package]
name = "anttp-rust-backend"
version = "1.0.4"
edition = "2021"
authors = ["Willie <willie@example.com>"]
description = "Complete AntTP-compatible Rust backend - ALL features implemented! (Lifetime fixed)"

[dependencies]
# Web Framework
actix-web = "4"
actix-multipart = "0.6"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Real Autonomi SDK (optional for now)
autonomi = { version = "0.5", optional = true }
evmlib = { version = "0.4", optional = true }

# Data Handling
bytes = "1"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"

# Utilities
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# GitHub Monitoring (optional)
octocrab = { version = "0.38", optional = true }

[features]
default = []
network = ["autonomi", "evmlib"]
monitoring = ["octocrab"]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"

[[bin]]
name = "anttp-backend"
path = "src/main.rs"
